# pam_okta

./: README.md  meson.build  protocol.h
oktad/: .oktad.c.swp  Makefile  log.c  meson.build  okta.h  oktad.c  parse.y
pam-test-harness/: Makefile  meson.build  pam-test-harness.c
pam_okta/: Makefile  meson.build  pam_okta.8  pam_okta.c
pam_oktad/: Makefile  compat.h  meson.build  okta.h  oktad.c  pam_oktad.8  pam_oktad.conf.5  pam_oktad.service.in  parse.y
